--- a/batch_scripts/linux/installation/environment_linux_py36tcapy.yml
+++ b/batch_scripts/linux/installation/environment_linux_py36tcapy.yml
@@ -246,6 +246,7 @@ dependencies:
   - pip:
     - alpha-vantage==2.1.3
     - amqp==2.5.2
+    - ansi2html==1.5.2
     - billiard==3.6.3.0
     - cairocffi==1.1.0
     - cairosvg==2.4.2
@@ -256,13 +257,13 @@ dependencies:
     - configparser==5.0.0
     - cssselect2==0.3.0
     - cufflinks==0.17.3
-    - dash==1.11.0
+    - dash==1.12.0
     - dash-auth==1.3.2
-    - dash-core-components==1.9.1
+    - dash-core-components==1.10.0
     - dash-daq==0.4.0
     - dash-html-components==1.0.3
-    - dash-renderer==1.4.0
-    - dash-table==4.6.2
+    - dash-renderer==1.4.1
+    - dash-table==4.7.0
     - dnspython==1.16.0
     - dtale==1.8.1
     - et-xmlfile==1.0.1
@@ -278,6 +279,7 @@ dependencies:
     - influxdb==5.2.3
     - jdcal==1.4.1
     - jeepney==0.4.3
+    - jupyter-dash==0.2.1
     - keyring==21.2.0
     - kombu==4.6.7
     - multiprocessing-on-dill==3.5.0a4
@@ -286,7 +288,7 @@ dependencies:
     - oauthlib==3.1.0
     - openpyxl==3.0.3
     - pandas-datareader==0.8.1
-    - plotly==4.6.0
+    - plotly==4.8.0
     - plotly-express==0.4.1
     - protobuf==3.6.1
     - pyphen==0.9.5
