--- a/batch_scripts/windows/installation/environment_windows_py36tcapy.yml
+++ b/batch_scripts/windows/installation/environment_windows_py36tcapy.yml
@@ -23,7 +23,7 @@ dependencies:
   - bzip2=1.0.8=hfa6e2cd_2
   - c-ares=1.15.0=h2fa13f4_1001
   - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py36_0
+  - certifi=2020.4.5.1=py36h9f0ad1d_0
   - cffi=1.14.0=py36ha419a9e_0
   - chardet=3.0.4=py36h9f0ad1d_1006
   - click=7.1.1=pyh8c360ce_0
@@ -210,7 +210,7 @@ dependencies:
   - win_inet_pton=1.1.0=py36_0
   - wincertstore=0.2=py36h7fe50ca_0
   - winpty=0.4.3=4
-  - xlwings=0.18.0=py36h9f0ad1d_1
+  - xlwings=0.19.4=py36h9f0ad1d_0
   - xz=5.2.5=h2fa13f4_0
   - yaml=0.2.4=he774522_0
   - zeromq=4.3.2=h6538335_2
@@ -221,6 +221,7 @@ dependencies:
   - pip:
     - alpha-vantage==2.1.3
     - amqp==2.5.2
+    - ansi2html==1.5.2
     - billiard==3.6.3.0
     - boto3==1.5.11
     - botocore==1.8.50
@@ -233,13 +234,13 @@ dependencies:
     - configparser==5.0.0
     - cssselect2==0.3.0
     - cufflinks==0.17.3
-    - dash==1.11.0
+    - dash==1.12.0
     - dash-auth==1.3.2
-    - dash-core-components==1.9.1
+    - dash-core-components==1.10.0
     - dash-daq==0.4.0
     - dash-html-components==1.0.3
-    - dash-renderer==1.4.0
-    - dash-table==4.6.2
+    - dash-renderer==1.4.1
+    - dash-table==4.7.0
     - dnspython==1.16.0
     - docutils==0.16
     - dtale==1.8.1
@@ -258,6 +259,7 @@ dependencies:
     - itsdangerous==1.1.0
     - jdcal==1.4.1
     - jmespath==0.9.5
+    - jupyter-dash==0.2.1
     - keyring==21.2.0
     - kombu==4.6.7
     - multiprocessing-on-dill==3.5.0a4
@@ -267,7 +269,7 @@ dependencies:
     - openpyxl==3.0.3
     - pandas-datareader==0.8.1
     - pdfkit==0.6.1
-    - plotly==4.6.0
+    - plotly==4.8.0
     - plotly-express==0.4.1
     - protobuf==3.6.1
     - pyphen==0.9.5
