--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -13,6 +13,10 @@ services:
       - ./source:/source:ro
     environment:
       - Maffay = 1
+    depends_on:
+      - influx
 
+  influx:
+      image: influxdb:1.8.0
 
 
