--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -2,13 +2,14 @@
 FROM tschm/jupyter as builder
 
 # File Author / Maintainer
-MAINTAINER Thomas Schmelzer "thomas.schmelzer@gmail.com"
+# MAINTAINER Thomas Schmelzer "thomas.schmelzer@gmail.com"
 
 #COPY requirements.txt /tmp/antarctic/requirements.txt
-COPY --chown=jovyan:users  . /tmp/tcapy
+# COPY --chown=jovyan:users  . /tmp/tcapy
 
 #RUN buildDeps='gcc g++' && \
 #    apt-get update && apt-get install -y $buildDeps --no-install-recommends && \
+# todo: won't work for now. Try conda install here instead...
 RUN pip install --no-cache-dir /tmp/tcapy && \
     #pip install --no-cache-dir mongomock && \
     rm  -rf /tmp/tcapy
