--- a/batch_scripts/linux/installation/environment_linux_py36tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py36tca.yml
@@ -8,30 +8,30 @@ dependencies:
   - aniso8601=8.0.0=py_0
   - arctic=1.79.2=py_4
   - arrow-cpp=0.16.0=py36hb0edad2_0
-  - atomicwrites=1.3.0=py_0
+  - atomicwrites=1.4.0=pyh9f0ad1d_0
   - attrs=19.3.0=py_0
   - aws-sdk-cpp=1.7.164=hc831370_1
   - backcall=0.1.0=py_0
   - beautifulsoup4=4.8.0=py36_0
-  - bleach=3.1.4=pyh9f0ad1d_0
-  - blosc=1.18.1=he1b5a44_0
+  - bleach=3.1.5=pyh9f0ad1d_0
+  - blosc=1.19.0=he1b5a44_0
   - bokeh=2.0.1=py36h9f0ad1d_0
   - boost-cpp=1.70.0=ha2d47e9_1
   - boto3=1.5.11=py36_0
   - botocore=1.5.92=py36_0
-  - bqplot=0.12.6=pyh8c360ce_0
-  - brotli=1.0.7=he1b5a44_1001
+  - bqplot=0.12.12=pyh9f0ad1d_0
+  - brotlipy=0.7.0=py36h8c4c3a4_1000
   - bzip2=1.0.8=h516909a_2
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py36_0
-  - cffi=1.14.0=py36hd463f26_0
+  - ca-certificates=2020.4.5.2=hecda079_0
+  - certifi=2020.4.5.2=py36h9f0ad1d_0
+  - cffi=1.11.5=py36_0
   - chardet=3.0.4=py36h9f0ad1d_1006
-  - click=7.1.1=pyh8c360ce_0
+  - click=7.1.2=pyh9f0ad1d_0
   - cloudpickle=1.3.0=py_0
   - coverage=5.1=py36h8c4c3a4_0
   - coveralls=2.0.0=py_0
-  - cryptography=2.8=py36h45558ae_2
+  - cryptography=2.9.2=py36h45558ae_0
   - curl=7.69.1=h33f0ec9_0
   - cycler=0.10.0=py_2
   - cython=0.29.13=py36he1b5a44_0
@@ -50,36 +50,35 @@ dependencies:
   - expat=2.2.9=he1b5a44_2
   - fastparquet=0.3.3=py36hc1659b7_0
   - flask=1.1.2=pyh9f0ad1d_0
-  - flask-restplus=0.13.0=py36_0
+  - flask-restplus=0.13.0=py36h9f0ad1d_2
   - fontconfig=2.13.1=he4413a7_1000
   - freetds=1.1.15=h8385b1f_0
-  - freetype=2.10.1=he06d7ca_0
+  - freetype=2.10.2=he06d7ca_0
   - freetype-py=2.1.0.post1=py_0
-  - fsspec=0.7.2=py_0
-  - gettext=0.19.8.1=hc5be6a0_1002
+  - fsspec=0.7.4=py_0
   - gflags=2.2.2=he1b5a44_1002
-  - glib=2.58.3=py36hd3ed26a_1004
-  - glog=0.4.0=he1b5a44_1
+  - glib=2.63.1=h3eb4bd4_1
+  - glog=0.4.0=h49b9bf7_3
   - grpc-cpp=1.25.0=h213be95_2
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
   - gunicorn=19.9.0=py36_1000
   - hdf5=1.10.5=nompi_h3c11f04_1104
   - heapdict=1.0.1=py_0
   - icu=58.2=hf484d3e_1000
   - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py36h9f0ad1d_0
-  - importlib_metadata=1.6.0=0
-  - ipykernel=5.2.0=py36h95af2a2_1
-  - ipython=7.13.0=py36h9f0ad1d_2
+  - importlib-metadata=1.6.1=py36h9f0ad1d_0
+  - importlib_metadata=1.6.1=0
+  - ipykernel=5.3.0=py36h95af2a2_0
+  - ipython=7.15.0=py36h9f0ad1d_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
   - itsdangerous=1.1.0=py_0
-  - jedi=0.16.0=py36h9f0ad1d_1
+  - jedi=0.17.0=py36h9f0ad1d_0
   - jinja2=2.11.1=py_0
-  - jmespath=0.9.5=py_0
-  - jpeg=9c=h14c3975_1001
-  - json5=0.9.0=py_0
+  - jmespath=0.10.0=pyh9f0ad1d_0
+  - jpeg=9d=h516909a_0
+  - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py36h9f0ad1d_1
   - jupyter_client=6.1.3=py_0
   - jupyter_contrib_core=0.3.3=py_2
@@ -88,8 +87,8 @@ dependencies:
   - jupyter_highlight_selected_word=0.2.0=py36_1000
   - jupyter_latex_envs=1.4.6=py36_1000
   - jupyter_nbextensions_configurator=0.4.1=py36_0
-  - jupyterlab=2.1.0=py_0
-  - jupyterlab_server=1.1.1=py_0
+  - jupyterlab=2.1.4=py_0
+  - jupyterlab_server=1.1.5=py_0
   - kiwisolver=1.2.0=py36hdb11119_0
   - krb5=1.17.1=h173b8e3_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
@@ -98,9 +97,9 @@ dependencies:
   - libcurl=7.69.1=hf7181ac_0
   - libedit=3.1.20181209=hc058e9b_0
   - libevent=2.1.10=h72c5cf5_0
-  - libffi=3.2.1=hd88cf55_4
+  - libffi=3.3=he6710b0_1
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libgfortran-ng=7.5.0=hdf63c60_6
   - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=14_openblas
   - libllvm8=8.0.1=hc9558a2_0
@@ -108,7 +107,7 @@ dependencies:
   - libpng=1.6.37=hed695b0_1
   - libprotobuf=3.11.0=h8b12597_0
   - libsodium=1.0.17=h516909a_0
-  - libssh2=1.8.2=h22169c7_2
+  - libssh2=1.9.0=hab1572f_2
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=hc7e4089_6
   - libuuid=2.32.1=h14c3975_1000
@@ -125,22 +124,22 @@ dependencies:
   - markupsafe=1.1.1=py36h8c4c3a4_1
   - matplotlib=3.1.1=py36h5429711_0
   - mistune=0.8.4=py36h8c4c3a4_1001
-  - mock=3.0.5=py36h9f0ad1d_1
+  - mock=4.0.2=py36h9f0ad1d_0
   - mockextras=1.0.2=py36h9f0ad1d_1
-  - more-itertools=8.2.0=py_0
+  - more-itertools=8.3.0=py_1
   - msgpack-python=1.0.0=py36hdb11119_1
   - multiprocess=0.70.8=py36h516909a_1
   - nbconvert=5.6.1=py36h9f0ad1d_1
-  - nbformat=5.0.4=py_0
-  - ncurses=6.2=he6710b0_0
+  - nbformat=5.0.6=py_0
+  - ncurses=6.2=he6710b0_1
   - nodejs=12.4.0=he1b5a44_0
-  - notebook=6.0.3=py36_0
+  - notebook=6.0.3=py36h9f0ad1d_0
   - numba=0.48.0=py36hb3f55d8_0
   - numexpr=2.7.1=py36h830a2c2_1
   - numpy=1.16.4=py36h95a1406_0
   - olefile=0.46=py_0
-  - openssl=1.1.1f=h516909a_0
-  - packaging=20.1=py_0
+  - openssl=1.1.1g=h516909a_0
+  - packaging=20.4=pyh9f0ad1d_0
   - pandas=0.24.2=py36hb3f55d8_1
   - pandoc=2.9.2.1=0
   - pandocfilters=1.4.2=py_1
@@ -153,12 +152,12 @@ dependencies:
   - pexpect=4.8.0=py36h9f0ad1d_1
   - pickleshare=0.7.5=py36h9f0ad1d_1001
   - pillow=5.3.0=py36h00a061d_1000
-  - pip=20.0.2=py36_1
+  - pip=20.0.2=py36_3
   - plotly-orca=1.3.1=1
-  - pluggy=0.12.0=py_0
+  - pluggy=0.13.1=py36h9f0ad1d_1
   - pox=0.2.7=py_0
   - ppft=1.6.6.1=py36h9f0ad1d_1
-  - prometheus_client=0.7.1=py_0
+  - prometheus_client=0.8.0=pyh9f0ad1d_0
   - prompt-toolkit=3.0.5=py_0
   - psutil=5.6.3=py36h516909a_0
   - pthread-stubs=0.4=h14c3975_1001
@@ -167,7 +166,7 @@ dependencies:
   - pyarrow=0.16.0=py36h8b68381_1
   - pycparser=2.20=py_0
   - pygments=2.6.1=py_0
-  - pymongo=3.10.1=py36he1b5a44_0
+  - pymongo=3.10.1=py36h831f99a_1
   - pymssql=2.1.4=py36hf484d3e_2001
   - pyodbc=4.0.23=py36hfc679d8_1
   - pyopenssl=19.1.0=py_1
@@ -178,16 +177,16 @@ dependencies:
   - pytables=3.5.2=py36h9f153d1_2
   - pytest=5.1.0=py36_0
   - pytest-cov=2.5.1=py_1
-  - python=3.6.10=hcf32534_1
+  - python=3.6.10=h7579374_2
   - python-blosc=1.8.3=py36hb3f55d8_0
   - python-dateutil=2.8.1=py_0
   - python-pdfkit=0.6.1=py_0
   - python-snappy=0.5.4=py36h7cfaab3_1
   - python_abi=3.6=1_cp36m
-  - pytz=2019.3=py_0
+  - pytz=2020.1=pyh9f0ad1d_0
   - pyyaml=5.3.1=py36h8c4c3a4_0
-  - pyzmq=19.0.0=py36h9947dbf_1
-  - qt=5.9.7=h52cfd70_2
+  - pyzmq=19.0.1=py36h9947dbf_0
+  - qt=5.9.7=h5867ecd_1
   - re2=2020.04.01=he1b5a44_0
   - readline=8.0=h7b6447c_0
   - redis-py=3.3.7=py_0
@@ -196,15 +195,15 @@ dependencies:
   - s3transfer=0.1.13=py36_1001
   - scipy=1.3.1=py36h921218d_2
   - send2trash=1.5.0=py_0
-  - setuptools=46.1.3=py36_0
+  - setuptools=47.1.1=py36_0
   - setuptools-git=1.2=py_1
   - sip=4.19.8=py36hf484d3e_1000
-  - six=1.14.0=py_1
+  - six=1.15.0=pyh9f0ad1d_0
   - snappy=1.1.8=he1b5a44_1
-  - sortedcontainers=2.1.0=py_0
-  - soupsieve=1.9.4=py36h9f0ad1d_1
+  - sortedcontainers=2.2.1=pyh9f0ad1d_0
+  - soupsieve=2.0.1=py36h9f0ad1d_0
   - sqlalchemy=1.3.7=py36h516909a_0
-  - sqlite=3.31.1=h7b6447c_0
+  - sqlite=3.31.1=h62c20be_1
   - statsmodels=0.10.1=py36hc1659b7_2
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py36h9f0ad1d_1
@@ -216,14 +215,14 @@ dependencies:
   - tornado=6.0.4=py36h8c4c3a4_1
   - traitlets=4.3.3=py36h9f0ad1d_1
   - traittypes=0.2.1=py_1
-  - typing_extensions=3.7.4.1=py36h9f0ad1d_3
-  - tzlocal=2.0.0=py_0
-  - unixodbc=2.3.7=h227dcee_1000
-  - urllib3=1.25.8=py36h9f0ad1d_1
-  - vispy=0.6.4=py36hf5ce8a7_0
-  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - typing_extensions=3.7.4.2=py_0
+  - tzlocal=2.1=pyh9f0ad1d_0
+  - unixodbc=2.3.7=hd1b7508_1000
+  - urllib3=1.25.9=py_0
+  - vispy=0.6.4=py36h931dd22_1
+  - wcwidth=0.2.4=pyh9f0ad1d_0
   - webencodings=0.5.1=py_1
-  - werkzeug=1.0.1=pyh9f0ad1d_0
+  - werkzeug=0.16.0=py_0
   - wheel=0.34.2=py36_0
   - widgetsnbextension=3.5.1=py36_0
   - wkhtmltopdf=0.12.4=1
@@ -236,23 +235,26 @@ dependencies:
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.2.3=h516909a_0
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h516909a_0
   - zeromq=4.3.2=he1b5a44_2
   - zict=2.0.0=py_0
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.4=h3b9ef0a_2
   - pip:
-    - alpha-vantage==2.1.3
+    - aiohttp==3.6.2
+    - alpha-vantage==2.2.0
     - amqp==2.5.2
     - ansi2html==1.5.2
+    - async-timeout==3.0.1
     - billiard==3.6.3.0
+    - brotli==1.0.7
     - cairocffi==1.1.0
     - cairosvg==2.4.2
     - celery==4.4.0
     - chart-studio==1.1.0
-    - chartpy==0.1.5
+    - chartpy==0.1.8
     - colorlover==0.3.0
     - configparser==5.0.0
     - cssselect2==0.3.0
@@ -260,28 +262,30 @@ dependencies:
     - dash==1.12.0
     - dash-auth==1.3.2
     - dash-core-components==1.10.0
-    - dash-daq==0.4.0
+    - dash-daq==0.5.0
     - dash-html-components==1.0.3
     - dash-renderer==1.4.1
     - dash-table==4.7.0
     - dnspython==1.16.0
     - dtale==1.8.1
     - et-xmlfile==1.0.1
-    - findatapy==0.1.10
-    - flask-compress==1.4.0
+    - findatapy==0.1.11
+    - flask-compress==1.5.0
     - flask-ngrok==0.0.25
     - flask-seasurf==0.2.2
     - flask-session==0.3.1
     - future==0.18.2
     - fxcmpy==1.2.6
     - html5lib==1.0.1
-    - inflection==0.4.0
+    - idna-ssl==1.1.0
+    - inflection==0.5.0
     - influxdb==5.2.3
     - jdcal==1.4.1
     - jeepney==0.4.3
     - jupyter-dash==0.2.1
-    - keyring==21.2.0
+    - keyring==21.2.1
     - kombu==4.6.7
+    - multidict==4.7.6
     - multiprocessing-on-dill==3.5.0a4
     - multitasking==0.0.9
     - mysql-connector-python==8.0.19
@@ -289,7 +293,6 @@ dependencies:
     - openpyxl==3.0.3
     - pandas-datareader==0.8.1
     - plotly==4.8.0
-    - plotly-express==0.4.1
     - protobuf==3.6.1
     - pyphen==0.9.5
     - pystore==0.1.15
@@ -308,5 +311,6 @@ dependencies:
     - vine==1.3.0
     - weasyprint==51
     - websocket-client==0.57.0
+    - yarl==1.4.2
     - yfinance==0.1.54
 
