fix jupyter release

--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,4 +1,4 @@
-FROM tschm/jupyter as builder
+FROM tschm/jupyter:1.2.0 as builder
 
 # File Author / Maintainer
 # MAINTAINER Thomas Schmelzer "thomas.schmelzer@gmail.com"
