--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ arctic==1.79.2
 sqlalchemy==1.3.7
 redis==3.3.7
 pymssql==2.1.4
-pandas=0.24.2
-numpy=1.16.4
+pandas==0.24.2
+numpy==1.16.4
 scipy==1.3.1
 statsmodels==0.10.1
 pytables==3.5.2
@@ -17,7 +17,7 @@ fastparquet==0.3.3
 flask-restplus==0.13.0
 gunicorn==19.9.0
 beautifulsoup4==4.8.0
-pdfkit=0.6.1
+pdfkit==0.6.1
 psutil==5.6.3
 matplotlib==3.1.1
 boto3==1.5.11
@@ -56,7 +56,7 @@ dask==2.14.0
 distributed==2.14.0
 cloudpickle==1.3.0
 python-snappy==0.5.4
-bokeh=2.0.1
+bokeh==2.0.1
 msgpack==1.0.0
 pystore==0.1.15
 fsspec==0.3.3
