--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pandas==0.24.2
 numpy==1.16.4
 scipy==1.3.1
 statsmodels==0.10.1
-pytables==3.5.2
+tables==3.5.2
 blosc==1.8.3
 pyarrow==0.16.0
 pathos==0.2.1
