--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ findatapy==0.1.11
 dash-auth==1.3.2
 cufflinks==0.17.3
 plotly==4.8.0
-chart-studio==1.1.0 \
+chart-studio==1.1.0
 dash==1.12.0
 dash-html-components==1.0.3
 dash-core-components==1.10.0
