Added APP_ENV parameter

--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -3,6 +3,7 @@ FROM tschm/jupyter as builder
 # File Author / Maintainer
 # MAINTAINER Thomas Schmelzer "thomas.schmelzer@gmail.com"
 ENV HOME /home/${NB_USER}
+ENV APP_ENV docker
 
 COPY --chown=jovyan:users  . /tmp/tcapy
 
