--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,6 @@ services:
 
   redis:
     image: "redis:alpine"
-    command: redis-server --bind 0.0.0.0 --port 6379 --save ""
+    command: redis-server --bind redis --port 6379 --save ""
     ports:
       - 6379:6379
