Updated microstructure notebook

--- a/tcapy/conf/redis.conf
+++ b/tcapy/conf/redis.conf
@@ -393,7 +393,7 @@ slave-priority 100
 # limit for maxmemory so that there is some free RAM on the system for slave
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-maxmemory 48gb
+maxmemory 32gb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
@@ -416,9 +416,9 @@ maxmemory 48gb
 #
 # The default is:
 #
-# maxmemory-policy volatile-lru
+maxmemory-policy volatile-lru
 
-maxmemory-policy noeviction
+# maxmemory-policy noeviction
 
 # LRU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can select as well the sample
