Added Docker with more dependencies

--- a/tcapy/conf/tcapy_nginx_gunicorn_docker.conf
+++ b/tcapy/conf/tcapy_nginx_gunicorn_docker.conf
@@ -7,28 +7,19 @@ server {
 
     location /tcapy/ {
         rewrite ^/tcapy(.*)$ $1 break;
-        proxy_set_header Host localhost;
+        proxy_set_header Host gunicorn_tcapy;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://localhost:8090/;
-    }
-
-    location /tcapyapi/ {
-        rewrite ^/tcapyapi(.*)$ $1 break;
-        proxy_set_header Host localhost;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://localhost:8091/;
+        proxy_pass http://gunicorn_tcapy:8090/;
     }
 
     location /tcapyboard/ {
         rewrite ^/tcapyboard(.*)$ $1 break;
-        proxy_set_header Host localhost;
+        proxy_set_header Host gunicorn_tcapyboard;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://localhost:8092/;
+        proxy_pass http://gunicorn_tcapyboard:8092/;
     }
 }
