--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
 version: '3.6'
 services:
-  tcapy:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: builder
-    environment:
-      - APP_ENV=docker
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - 9000:9000
+      - 80:80
+    volumes:
+      - ./tcapy:/tcapy
+      - ./tcapy/conf/tcapy_nginx_gunicorn_docker.conf:/etc/nginx/conf.d/default.conf
+      - ./log:/var/log/nginx
     depends_on:
-      - redis
+      - gunicorn_tcapy
+      - gunicorn_tcapyboard
 
   jupyter:
     build:
@@ -21,9 +26,104 @@ services:
       - 8888:8888
     depends_on:
       - redis
+      - celery
+
+  gunicorn_tcapy:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    command: "gunicorn --bind 0.0.0.0:8090 --workers 4 --threads 6 --preload --chdir /tcapy/tcapy/conf \
+        --access-logfile /tcapy/log/gunicorn_tcapy_access.log \
+        --error-logfile /tcapy/log/gunicorn_tcapy_error.log tcapy_wsgi:application & "
+    volumes:
+      - ./log:/tcapy/log
+    env_file: .tcapy.env
+    environment:
+      - APP_ENV=docker
+      - TCAPY_CUEMACRO=/tcapy
+    depends_on:
+      - redis
+      - mongo
+      - mysql
+      - memcached
+      - celery
+    ports:
+      - 8090:8090
+
+  gunicorn_tcapyboard:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    command: "gunicorn --bind 0.0.0.0:8092 --workers 4 --threads 6 --preload --chdir /tcapy/tcapy/conf \
+        --access-logfile /tcapy/log/gunicorn_tcapy_access.log \
+        --error-logfile /tcapy/log/gunicorn_tcapy_error.log tcapyboard_wsgi:application & "
+    volumes:
+      - ./log:/tcapy/log
+    env_file: .tcapy.env
+    environment:
+      - APP_ENV=docker
+      - TCAPY_CUEMACRO=/tcapy
+    depends_on:
+      - redis
+      - mongo
+      - mysql
+      - memcached
+      - celery
+    ports:
+      - 8092:8092
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: builder
+    working_dir: /tcapy
+    command: "celery -A tcapy.conf.celery_calls worker --purge --discard --loglevel=debug -Q celery --concurrency=14 -f log/celery.log"
+    volumes:
+      - ./log:/tcapy/log
+    env_file: .tcapy.env
+    environment:
+      - APP_ENV=docker
+      - C_FORCE_ROOT=true
+    depends_on:
+      - redis
+      - mongo
+      - mysql
+      - memcached
 
   redis:
     image: "redis:alpine"
-    command: redis-server --bind redis --port 6379 --save ""
+    command: redis-server --port 6379 --save ""
     ports:
       - 6379:6379
+
+  memcached:
+    image: memcached
+    ports:
+      - 11211:11211
+
+  mongo:
+    image: mongo:latest
+    env_file: .tcapy.env
+    environment:
+      - MONGO_AUTH_SOURCE=admin
+    ports:
+      - 27017:27017
+    volumes:
+      - /data/db_mongodb:/data/db
+
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - /data/db_mysql:/var/lib/mysql
+    env_file: .tcapy.env
+    ports:
+      - 3306:3306
+
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
