--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       # Runs a single command using the runners shell
       #- name: test
       - run: make test
-      - env:
+        env:
           - RUN_PART: 1
 
       #- name: artifacts
