--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       #- name: test
       - run: make test
         env:
-          - RUN_PART: 1
+          RUN_PART: 1
 
       #- name: artifacts
       - uses: actions/upload-artifact@v2
