--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -14,9 +14,16 @@ RUN chown -R ${NB_UID} ${HOME}
 # Install snappy for pystore and ODBC
 USER root
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    libsnappy-dev gcc g++ unixodbc-dev
+# Minimal dependencies
+#RUN apt-get update && \
+#    apt-get install -y --no-install-recommends \
+#    libsnappy-dev gcc g++ unixodbc-dev
+
+# Dependencies for pystore and weasyprint in buildDeps
+# If we don't want to use weasyprint we
+# build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
+RUN buildDeps='gcc g++ libsnappy-dev unixodbc-dev build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info' && \
+    apt-get update && apt-get install -y $buildDeps --no-install-recommends
 
 # Switch back to jovyan to avoid accidental container runs as root
 USER $NB_UID
@@ -24,4 +31,7 @@ USER $NB_UID
 RUN pip install --no-cache-dir /tmp/tcapy && \
     rm -rf /tmp/tcapy
 
+RUN ln -s /home/${NB_USER}/tcapy /home/${NB_USER}/work/tcapy
+RUN ln -s /home/${NB_USER}/tcapyuser /home/${NB_USER}/work/tcapyuser
 RUN ln -s /home/${NB_USER}/tcapy_notebooks /home/${NB_USER}/work/tcapy_notebooks
+RUN ln -s /home/${NB_USER}/tcapy_scripts /home/${NB_USER}/work/tcapy_scripts
