--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,8 @@ chartpy==0.1.8
 findatapy==0.1.11
 dash-auth==1.3.2
 cufflinks==0.17.3
-plotly==4.8.1
+plotly==4.9.0
+kaleido
 chart-studio==1.1.0
 dash==1.12.0
 dash-html-components==1.0.3
