--- a/batch_scripts/linux/installation/environment_linux_py36tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py36tca.yml
@@ -261,6 +261,7 @@ dependencies:
     - cufflinks==0.17.3
     - dash==1.12.0
     - dash-auth==1.3.2
+    - dash-bootstrap-components==0.10.3
     - dash-core-components==1.10.0
     - dash-daq==0.5.0
     - dash-html-components==1.0.3
