--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -22,7 +22,7 @@ USER root
 # Dependencies for pystore and weasyprint in buildDeps
 # If we don't want to use weasyprint we
 # build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
-RUN buildDeps='gcc g++ libsnappy-dev unixodbc-dev build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info' && \
+RUN buildDeps='gcc g++ libhdf5-dev libsnappy-dev unixodbc-dev build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info' && \
     apt-get update && apt-get install -y $buildDeps --no-install-recommends
 
 # Switch back to jovyan to avoid accidental container runs as root
