--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -28,8 +28,8 @@ RUN buildDeps='gcc g++ libhdf5-dev hdf5-tools libsnappy-dev unixodbc-dev build-e
 # Switch back to jovyan to avoid accidental container runs as root
 USER $NB_UID
 
-RUN pip install --no-cache-dir /tmp/tcapy && \
-    rm -rf /tmp/tcapy --hdf5=/opt/local
+RUN pip install --no-cache-dir /tmp/tcapy --hdf5=/opt/local && \
+    rm -rf /tmp/tcapy
 
 RUN ln -s /home/${NB_USER}/tcapy /home/${NB_USER}/work/tcapy
 RUN ln -s /home/${NB_USER}/tcapyuser /home/${NB_USER}/work/tcapyuser
