--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -23,12 +23,14 @@ USER root
 # If we don't want to use weasyprint we
 # build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
 RUN buildDeps='gcc g++ libhdf5-dev hdf5-tools libsnappy-dev unixodbc-dev build-essential libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info' && \
-    apt-get update && apt-get install -y $buildDeps --no-install-recommends
+    apt-get update && apt-get install -y $buildDeps --no-install-recommends apt-utils
 
 # Switch back to jovyan to avoid accidental container runs as root
 USER $NB_UID
 
-RUN pip install --no-cache-dir /tmp/tcapy --hdf5=/opt/local && \
+ENV PATH="/opt/local:${PATH}"
+
+RUN pip install --no-cache-dir /tmp/tcapy && \
     rm -rf /tmp/tcapy
 
 RUN ln -s /home/${NB_USER}/tcapy /home/${NB_USER}/work/tcapy
