--- a/batch_scripts/linux/installation/environment_linux_py37tca.yml
+++ b/batch_scripts/linux/installation/environment_linux_py37tca.yml
@@ -8,18 +8,19 @@ dependencies:
   - aniso8601=8.0.0=py_0
   - arctic=1.79.3=py_0
   - argon2-cffi=20.1.0=py37h8f50634_1
-  - arrow-cpp=1.0.1=py37h1234567_1_cpu
-  - attrs=20.1.0=pyh9f0ad1d_0
+  - arrow-cpp=1.0.1=py37h1234567_2_cpu
+  - async_generator=1.10=py_0
+  - attrs=20.2.0=pyh9f0ad1d_0
   - aws-sdk-cpp=1.7.164=hba45d7a_2
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
   - beautifulsoup4=4.9.1=py_1
   - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.20.0=he1b5a44_0
-  - bokeh=2.2.0=py37hc8dfbb8_0
-  - boto3=1.14.48=pyh9f0ad1d_0
-  - botocore=1.17.48=pyh9f0ad1d_0
+  - blosc=1.20.1=he1b5a44_0
+  - bokeh=2.2.1=py37hc8dfbb8_0
+  - boto3=1.14.60=pyh9f0ad1d_0
+  - botocore=1.17.60=pyh9f0ad1d_0
   - bqplot=0.12.16=pyh9f0ad1d_0
   - brotlipy=0.7.0=py37h8f50634_1000
   - bzip2=1.0.8=h516909a_3
@@ -30,19 +31,19 @@ dependencies:
   - chardet=3.0.4=py37hc8dfbb8_1006
   - click=7.1.2=pyh9f0ad1d_0
   - cloudpickle=1.6.0=py_0
-  - coverage=5.2.1=py37h8f50634_0
+  - coverage=5.3=py37h8f50634_0
   - coveralls=2.1.2=py_0
-  - cryptography=3.0=py37hb09aad4_0
+  - cryptography=3.1=py37hb09aad4_0
   - curl=7.71.1=he644dc0_5
   - cycler=0.10.0=py_2
   - cython=0.29.21=py37h3340039_0
   - cytoolz=0.10.1=py37h516909a_0
-  - dask=2.24.0=py_0
-  - dask-core=2.24.0=py_0
+  - dask=2.26.0=py_0
+  - dask-core=2.26.0=py_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - dill=0.3.2=pyh9f0ad1d_0
-  - distributed=2.24.0=py37hc8dfbb8_0
+  - distributed=2.26.0=py37hc8dfbb8_0
   - docopt=0.6.2=py_1
   - docutils=0.15.2=py37_0
   - entrypoints=0.3=py37hc8dfbb8_1001
@@ -51,23 +52,22 @@ dependencies:
   - flask=1.1.2=pyh9f0ad1d_0
   - flask-restplus=0.13.0=py37_0
   - fontconfig=2.13.1=h1056068_1002
-  - freetds=1.1.15=h8385b1f_0
   - freetype=2.10.2=he06d7ca_0
   - freetype-py=2.2.0=pyh9f0ad1d_0
   - gflags=2.2.2=he1b5a44_1004
   - glog=0.4.0=h49b9bf7_3
   - grpc-cpp=1.30.2=heedbac9_0
   - gunicorn=20.0.4=py37hc8dfbb8_1
-  - hdf5=1.10.6=nompi_h3c11f04_101
   - heapdict=1.0.1=py_0
   - icu=67.1=he1b5a44_0
+  - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=1.7.0=py37hc8dfbb8_0
   - importlib_metadata=1.7.0=0
   - iniconfig=1.0.1=pyh9f0ad1d_0
   - ipykernel=5.3.4=py37h43977f1_0
-  - ipython=7.17.0=py37hc6149b9_0
+  - ipython=7.18.1=py37hc6149b9_0
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
+  - ipywidgets=7.5.1=pyh9f0ad1d_1
   - itsdangerous=1.1.0=py_0
   - jedi=0.15.2=py37_0
   - jinja2=2.11.2=pyh9f0ad1d_0
@@ -75,31 +75,32 @@ dependencies:
   - jpeg=9d=h516909a_0
   - json5=0.9.4=pyh9f0ad1d_0
   - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter_client=6.1.6=py_0
+  - jupyter_client=6.1.7=py_0
   - jupyter_contrib_core=0.3.3=py_2
   - jupyter_contrib_nbextensions=0.5.1=py37_0
   - jupyter_core=4.6.3=py37hc8dfbb8_1
   - jupyter_highlight_selected_word=0.2.0=py37_1000
   - jupyter_latex_envs=1.4.6=py37_1000
   - jupyter_nbextensions_configurator=0.4.1=py37hc8dfbb8_1
-  - jupyterlab=2.2.6=py_0
+  - jupyterlab=2.2.8=py_0
+  - jupyterlab_pygments=0.1.1=pyh9f0ad1d_0
   - jupyterlab_server=1.2.0=py_0
   - kiwisolver=1.2.0=py37h99015e2_0
-  - krb5=1.17.1=hfafb76e_2
+  - krb5=1.17.1=hfafb76e_3
   - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
   - libcurl=7.71.1=hcdd3856_5
   - libedit=3.1.20191231=h14c3975_1
-  - libev=4.33=h516909a_0
+  - libev=4.33=h516909a_1
   - libevent=2.1.10=hcdb4288_2
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.5.0=hdf63c60_16
   - libiconv=1.16=h516909a_0
   - liblapack=3.8.0=17_openblas
-  - libllvm10=10.0.1=he513fc3_1
+  - libllvm10=10.0.1=he513fc3_3
   - libnghttp2=1.41.0=h8cfc5f6_2
   - libopenblas=0.3.10=pthreads_hb3c22a3_4
   - libpng=1.6.37=hed695b0_2
@@ -110,33 +111,31 @@ dependencies:
   - libtiff=4.1.0=hc7e4089_6
   - libutf8proc=2.5.0=h516909a_2
   - libuuid=2.32.1=h14c3975_1000
-  - libuv=1.38.0=h516909a_0
+  - libuv=1.39.0=h516909a_0
   - libwebp-base=1.1.0=h516909a_3
   - libxcb=1.13=h14c3975_1002
   - libxml2=2.9.10=h68273f3_2
   - libxslt=1.1.33=h572872d_1
-  - llvmlite=0.34.0=py37h5202443_0
+  - llvmlite=0.34.0=py37h5202443_1
   - locket=0.2.0=py_2
   - lxml=4.5.2=py37he3881c9_0
   - lz4=3.1.0=py37h5a7ed16_0
   - lz4-c=1.9.2=he1b5a44_3
-  - lzo=2.10=h516909a_1000
   - markupsafe=1.1.1=py37h8f50634_1
   - matplotlib=3.3.1=1
   - matplotlib-base=3.3.1=py37hd478181_1
   - mistune=0.8.4=py37h8f50634_1001
-  - mock=4.0.2=py37hc8dfbb8_0
   - mockextras=1.0.2=py37hc8dfbb8_1
-  - more-itertools=8.4.0=py_0
+  - more-itertools=8.5.0=py_0
   - msgpack-python=1.0.0=py37h99015e2_1
   - multiprocess=0.70.10=py37h8f50634_0
-  - nbconvert=5.6.1=py37hc8dfbb8_1
+  - nbclient=0.5.0=py_0
+  - nbconvert=6.0.2=py37hc8dfbb8_0
   - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
-  - nodejs=14.8.0=h568c755_0
-  - notebook=6.1.3=py37hc8dfbb8_0
-  - numba=0.51.0=py37h9fdb41a_0
-  - numexpr=2.7.1=py37h0da4684_1
+  - nodejs=14.10.1=h568c755_0
+  - notebook=6.1.4=py37hc8dfbb8_0
+  - numba=0.51.2=py37h9fdb41a_0
   - numpy=1.19.1=py37h7ea13bd_2
   - olefile=0.46=py_0
   - openssl=1.1.1g=h516909a_1
@@ -156,25 +155,24 @@ dependencies:
   - pluggy=0.13.1=py37hc8dfbb8_2
   - pox=0.2.8=pyh9f0ad1d_0
   - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.6=py_0
+  - prompt-toolkit=3.0.7=py_0
   - psutil=5.7.2=py37h8f50634_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
   - py=1.9.0=pyh9f0ad1d_0
-  - pyarrow=1.0.1=py37h1234567_1_cpu
+  - pyarrow=1.0.1=py37h1234567_2_cpu
   - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.6.1=py_0
-  - pymongo=3.10.1=py37h3340039_2
+  - pygments=2.7.0=py_0
+  - pymongo=3.11.0=py37h3340039_3
   - pyodbc=4.0.30=py37he1b5a44_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyrsistent=0.16.0=py37h8f50634_0
+  - pyrsistent=0.17.3=py37h8f50634_0
   - pysocks=1.7.1=py37hc8dfbb8_1
-  - pytables=3.6.1=py37h56451d4_2
-  - pytest=6.0.1=py37hc8dfbb8_0
+  - pytest=6.0.2=py37hc8dfbb8_0
   - pytest-cov=2.10.1=pyh9f0ad1d_0
-  - python=3.7.7=hcff3b4d_5
-  - python-blosc=1.9.1=py37h0da4684_0
+  - python=3.7.9=h7579374_0
+  - python-blosc=1.9.2=py37h9fdb41a_0
   - python-dateutil=2.8.1=py_0
   - python-pdfkit=0.6.1=py_0
   - python-snappy=0.5.4=py37h7cfaab3_1
@@ -182,9 +180,10 @@ dependencies:
   - pytz=2020.1=pyh9f0ad1d_0
   - pyyaml=5.3.1=py37h8f50634_0
   - pyzmq=19.0.2=py37hac76be4_0
-  - re2=2020.08.01=he1b5a44_0
+  - re2=2020.08.01=he1b5a44_1
   - readline=8.0=h7b6447c_0
   - redis-py=3.5.3=pyh9f0ad1d_0
+  - requests=2.24.0=pyh9f0ad1d_0
   - rise=5.6.1=py37hc8dfbb8_1
   - s3transfer=0.3.3=py37hc8dfbb8_1
   - scipy=1.5.2=py37hb14ef9d_0
@@ -197,12 +196,12 @@ dependencies:
   - soupsieve=2.0.1=py_1
   - sqlalchemy=1.3.19=py37h8f50634_0
   - sqlite=3.33.0=h62c20be_0
-  - statsmodels=0.11.1=py37h8f50634_2
+  - statsmodels=0.12.0=py37h8f50634_0
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
   - thrift=0.11.0=py37he1b5a44_1001
-  - thrift-cpp=0.13.0=h62aa4f2_3
+  - thrift-cpp=0.13.0=h5aa387f_4
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=pyh9f0ad1d_0
   - toolz=0.10.0=py_0
@@ -211,7 +210,7 @@ dependencies:
   - traittypes=0.2.1=py_1
   - typing_extensions=3.7.4.2=py_0
   - tzlocal=2.1=pyh9f0ad1d_0
-  - unixodbc=2.3.7=hd1b7508_1000
+  - unixodbc=2.3.9=h0e019cf_0
   - urllib3=1.25.10=py_0
   - vispy=0.6.4=py37h850d375_1
   - wcwidth=0.2.5=pyh9f0ad1d_1
@@ -244,7 +243,7 @@ dependencies:
     - appdirs==1.4.3
     - async-timeout==3.0.1
     - billiard==3.6.3.0
-    - brotli==1.0.7
+    - brotli==1.0.9
     - cairocffi==1.1.0
     - cairosvg==2.4.2
     - celery==4.4.0
@@ -282,14 +281,13 @@ dependencies:
     - html5lib==1.1
     - http3==0.6.7
     - hyperframe==5.2.0
-    - idna==2.8
     - inflection==0.5.1
     - influxdb==5.2.3
     - jdcal==1.4.1
     - jeepney==0.4.3
     - jupyter-dash==0.2.1
     - kaleido==0.0.3.post1
-    - keyring==21.3.1
+    - keyring==21.4.0
     - kombu==4.6.7
     - multidict==4.7.6
     - multitasking==0.0.9
@@ -307,7 +305,6 @@ dependencies:
     - python-memcached==1.59
     - qpython==2.0.0
     - quandl==3.5.2
-    - requests==2.22.0
     - requests-async==0.6.2
     - requests-oauthlib==1.3.0
     - retrying==1.3.3
@@ -324,4 +321,3 @@ dependencies:
     - yarl==1.5.1
     - yfinance==0.1.54
     - zope-interface==5.1.0
-prefix: /home/tcapyuser/anaconda3/envs/py37tca
